--- a/Project/Client/Views/Home/Index.cshtml
+++ b/Project/Client/Views/Home/Index.cshtml
@@ -81,8 +81,8 @@
     </div>
 }
 <div class="gamemonth" style="margin-top:3vw;">
-    <section class="header_section" style="width:100%;border: 3px solid transparent; border-radius: 12px; padding: 15px 20px; background: linear-gradient(#fff, #fff) padding-box, linear-gradient(135deg, #00A97F, #800080) border-box; max-width: 80%; margin: 0 auto;">
-        <h1 style="font-family: 'Poppins', sans-serif; text-transform: uppercase; color: #00A97F; text-align: center;">
+    <section class="header_section">
+        <h1 style="font-family: 'Poppins', sans-serif; text-transform: uppercase;  text-align: center;">
             Game Of The Month
         </h1>
     </section>
@@ -353,8 +353,8 @@
 
 <div class="ortherproduct" style="margin-top:10vw;">
 
-    <section class="header_section" style="width:100%;border: 3px solid transparent; border-radius: 12px; padding: 15px 20px; background: linear-gradient(#fff, #fff) padding-box, linear-gradient(135deg, #00A97F, #800080) border-box; max-width: 83.3%; margin: 0 auto;">
-        <h1 style="font-family: 'Poppins', sans-serif; text-transform: uppercase; color: #00A97F; text-align: center;">
+    <section class="header_section">
+        <h1 style="font-family: 'Poppins', sans-serif; text-transform: uppercase; text-align: center;">
             Orther Product
         </h1>
     </section>
