--- a/Project/Client/Views/Product/Collection.cshtml.css
+++ b/Project/Client/Views/Product/Collection.cshtml.css
@@ -31,3 +31,25 @@
 .container-content {
     flex-grow: 1;
 }
+
+.text {
+    color: #33cc33;
+    font-size: 40px;
+    font-weight: bold;
+    width: 100%;
+}
+
+body.dark-theme .text {
+    color: #6842ff;
+}
+
+hr {
+    border: none; /* Loại bỏ đường viền mặc định */
+    height: 4px; /* Đặt chiều cao cho đường gạch ngang */
+    background-color: black; /* Màu sắc của đường gạch ngang */
+    margin: 20px 0; /* Thêm khoảng cách phía trên và dưới đường gạch ngang */
+}
+
+body.dark-theme hr {
+    background-color: #6842ff;
+}
