--- a/Project/Client/Views/User/PasswordSecurity.cshtml
+++ b/Project/Client/Views/User/PasswordSecurity.cshtml
@@ -69,7 +69,7 @@
 
         <div class="col-md-9 p-4">
             <div>
-                <h3 class="fw-bold text-success"><i class="fas fa-lock"></i> PASSWORD & SECURITY</h3>
+                <h3 class="fw-bold"><i class="fas fa-lock"></i> PASSWORD & SECURITY</h3>
             </div>
             <hr />
             <!-- Đổi email và mật khẩu -->
@@ -96,7 +96,7 @@
                         <span class="text-danger" asp-validation-for="OldPassword"></span>
                     </div>
                     <div class="col-md-3">
-                        <button class="btn btn-success" type="submit">Save</button>
+                        <button class="btn" type="submit">Save</button>
                     </div>
                 </div>
 
