--- a/Project/Client/Views/Product/ProductDetail.cshtml
+++ b/Project/Client/Views/Product/ProductDetail.cshtml
@@ -501,7 +501,7 @@
                 <div class="mt-3">
                     <section id="popular">
                         <div class="d-flex justify-content-between align-items-center">
-                            <h3 style="font-size:2vw;">Same category</h3>
+                            <h3 class="same" style="font-size:2vw;">Same category</h3>
                             <div class="col-5 col-sm-5 col-md-5 footeer_card">
                                 <div class="btn_card" style="display:flex;justify-content:flex-end;" style="width:250px;font-size:font: 15px Montserrat;">
                                     <a asp-action="ViewAll" asp-controller="Product" asp-route-viewString="@cate" value="@cate" class="btn_orther" style="width:200px;font: 15px Montserrat;">View More</a>
