--- a/Project/Client/Views/User/UserDashboard.cshtml
+++ b/Project/Client/Views/User/UserDashboard.cshtml
@@ -158,8 +158,8 @@
         <h4>Summary</h4>
         <p>View more →</p>
         <div class="summary-charts">
-            <div class="chart">Views Chart</div>
-            <div class="chart">Downloads Chart</div>
+            <a asp-controller="Product" asp-action="Collection" class="chart text-decoration-none">Wishlist</a>
+            <a asp-controller="Product" asp-action="Product" class="chart text-decoration-none">All Products</a>
         </div>
     </div>
 </div>
