--- a/Project/Client/Views/Shared/_Layout.cshtml
+++ b/Project/Client/Views/Shared/_Layout.cshtml
@@ -135,18 +135,22 @@
                                 <a class="nav-link dropdown-toggle" id="dropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
-                                    <a class="navelement" asp-controller="User" asp-action="Register">Register</a>
-                                    <a class="navelement" asp-controller="User" asp-action="Login">Login</a>
-                                    <a class="navelement" asp-controller="Order" asp-action="History">History</a>
-                                    <a class="navelement" asp-controller="User" asp-action="Information">Information</a>
-                                    <a class="navelement" asp-controller="User" asp-action="ChangePassword">ChangePassword</a>
+                                    @* <a class="navelement" asp-controller="User" asp-action="Register">Register</a> *@
+                                    @* <a class="navelement" asp-controller="User" asp-action="Login">Login</a> *@
+                                    <a class="navelement" asp-controller="User" asp-action="UserDashboard" asp-route-name="">My Dashboard</a>
+                                    <br />
+                                    <a class="navelement" asp-controller="User" asp-action="Information">Information & Password</a>
+                                    <a class="navelement" asp-controller="Product" asp-action="Collection">Wishlist & Library</a>
                                     <a class="navelement" asp-controller="User" asp-action="Cart">Cart</a>
+
+                                    @* <a class="navelement" asp-controller="Order" asp-action="History">History</a> *@
+@*                                     <a class="navelement" asp-controller="User" asp-action="ChangePassword">ChangePassword</a>
                                     <a class="navelement" asp-controller="Product" asp-action="ProductDetail">ProductDetail</a></>
-                                    <a class="navelement" asp-controller="Product" asp-action="Collection">Collection</a>
                                     <a class="navelement" asp-controller="Admin" asp-action="AdminDashboard">AdminDashboard</a>
                                     <a class="navelement" asp-controller="User" asp-action="EditProfile">EditProfile</a>
-                                    <a class="navelement" asp-controller="User" asp-action="PasswordSecurity">Password&Security</a>
-                                    <a class="navelement" asp-controller="User" asp-action="UserDashboard" asp-route-name="">UserDashboard</a>
+                                    <a class="navelement" asp-controller="User" asp-action="PasswordSecurity">Password&Security</a> *@
+                                    <br />
+                                    <a class="navelement" asp-controller="User" asp-action="Login">Logout</a>
                                 </div>
                             </li>
                         </ul>
