--- a/Project/Client/Views/User/PasswordSecurity.cshtml
+++ b/Project/Client/Views/User/PasswordSecurity.cshtml
@@ -37,32 +37,28 @@
             <!-- Danh Muc -->
             <div class="nav flex-column">
                 <div class="custom-nav-item">
-                    <a asp-action="Information" asp-controller="User">
-                        <button >
+                    <a asp-controller="User" asp-action="Information">
+                        <button type="submit">
                             <i class="fas fa-user"></i> User information
                         </button>
                     </a>
                 </div>
                 <div class="custom-nav-item">
-                    <a asp-action="PasswordSecurity" asp-controller="User">
-                        <button >
+                    <a asp-controller="User" asp-action="PasswordSecurity">
+                        <button type="button" class="bg-success text-white">
                             <i class="fas fa-lock"></i> Password and Security
                         </button>
                     </a>
                 </div>
                 <div class="custom-nav-item">
-                    <a>
-                        <button>
-                            <i class="fas fa-heart"></i> Wishlist
-                        </button>
-                    </a>
+                    <button>
+                        <i class="fas fa-info-circle"></i> Privacy
+                    </button>
                 </div>
                 <div class="custom-nav-item">
-                    <a asp-action="Logout" asp-controller="User">
-                        <button >
-                            <i class="fas fa-heart"></i> Logout
-                        </button>
-                    </a>
+                    <button>
+                        <i class="fas fa-heart"></i> Order History
+                    </button>
                 </div>
             </div>
         </div>
