--- a/Project/Client/Views/Admin/AdminDashboard.cshtml
+++ b/Project/Client/Views/Admin/AdminDashboard.cshtml
@@ -139,7 +139,26 @@
                 </div>
             </div>
         </div>
+
         <div class="row col-6">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Input Form</h5>
+                        <form>
+                            <div class="mb-3">
+                                <label for="textInput" class="form-label">Nhập nội dung</label>
+                                <input type="text" class="form-control" id="textInput" placeholder="Nhập vào đây" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="dateInput" class="form-label">Chọn ngày</label>
+                                <input type="date" class="form-control" id="dateInput" required>
+                            </div>
+                            <button type="submit" class="btn btn-danger">Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
             <div class="col-12">
                 <div class="card">
                     <div class="card-body">
@@ -169,7 +188,6 @@
                                 }
                             </tbody>
                         </table>
-                        @* <button class="btn btn-outline-primary">Details</button> *@
                     </div>
                 </div>
             </div>
