--- a/Project/Client/Views/User/Information.cshtml
+++ b/Project/Client/Views/User/Information.cshtml
@@ -45,7 +45,7 @@
 
         <div class="col-md-9 p-4">
             <div>
-                <h3 class="fw-bold text-success"><i class="fas fa-user"></i> USER INFORMATION</h3>
+                <h3 class="fw-bold"><i class="fas fa-user"></i> USER INFORMATION</h3>
             </div>
             <hr />
             <div class="mt-5">
