--- a/Project/Client/wwwroot/css/site.css
+++ b/Project/Client/wwwroot/css/site.css
@@ -24,7 +24,7 @@ body {
     }
 
         body.dark-theme .navbaradmin {
-            background-color: #222222; /* Màu nền cho navbar trong chế độ tối */
+            background-color: #4a4a4a; /* Màu nền cho navbar trong chế độ tối */
         }
 
             /* Chỉnh màu chữ cho các mục trong navbar khi ở chế độ tối */
@@ -39,7 +39,9 @@ body {
 
 /* Avatar trong chế độ tối */
 body.dark-theme #avatar {
-    filter: invert(1); /* Đảo ngược màu */
+    filter: brightness(1); /* Không thay đổi màu ảnh, giữ nguyên độ sáng */
+    border: 2px solid #fff; /* Thêm viền trắng nếu muốn */
+    background-color: white;
 }
 /*Nav*/
 /*Index*/
@@ -50,6 +52,9 @@ body.dark-theme .gamefree{
 body.dark-theme .product-name {
     color: #E0F2F1;
 }
+    body.dark-theme .product-name:hover {
+        color: rgba(33, 150, 243, 1);
+    }
 
 .header_section {
     width: 100%;
@@ -78,6 +83,24 @@ body.dark-theme .gamemonth .header_section h1 {
 
 body.dark-theme .ortherproduct .header_section h1 {
     color: #6842ff;
+}
+body.dark-theme .lisotherproduct_name a {
+    background: linear-gradient(#fff, #fff) padding-box, linear-gradient(135deg, #FFD700, #008000) border-box;
+}
+body.dark-theme #more h3 {
+    background: linear-gradient(#fff, #fff) padding-box, linear-gradient(135deg, #FFD700, #008000) border-box;
+}
+body.dark-theme #new h3 {
+    background: linear-gradient(#fff, #fff) padding-box, linear-gradient(135deg, #FFD700, #008000) border-box;
+}
+body.dark-theme #free h3 {
+    background: linear-gradient(#fff, #fff) padding-box, linear-gradient(135deg, #FFD700, #008000) border-box;
+}
+body.dark-theme #popular h3 {
+    background: linear-gradient(#fff, #fff) padding-box, linear-gradient(135deg, #FFD700, #008000) border-box;
+}
+body.dark-theme .best-seller_most-player_top-upcoming-wishlisted h2 {
+    background: linear-gradient(#fff, #fff) padding-box, linear-gradient(135deg, #FFD700, #008000) border-box;
 }
 /*Index*/
 /*Product*/
@@ -1081,12 +1104,19 @@ header {
         margin: 0 5px; /* Thêm khoảng cách giữa các thẻ a */
         text-transform: uppercase;
     }
+    
 
-        .lisotherproduct_name a:hover {
-            color: #fff; /* Màu chữ khi hover */
-            background: #00A97F; /* Màu nền khi hover */
-            border-color: #00A97F; /* Màu viền khi hover */
-        }
+
+.lisotherproduct_name a:hover {
+    color: #fff; /* Màu chữ khi hover */
+    background: #00A97F; /* Màu nền khi hover */
+    border-color: #00A97F; /* Màu viền khi hover */
+}
+body.dark-theme .lisotherproduct_name a:hover {
+    color: #fff; /* Màu chữ khi hover */
+    background: #00A97F; /* Màu nền khi hover */
+    border-color: #00A97F; /* Màu viền khi hover */
+}
 
 
 
@@ -1132,6 +1162,10 @@ header {
     transition: 0.5s ease-in-out;
     margin: 5px; /* Thêm khoảng cách giữa các card */
     overflow: hidden;
+}
+body.dark-theme .card_other {
+    box-shadow: 0px 7px 10px rgba(33, 150, 243, 1); /* Màu vàng sáng */
+    /* Đổi màu đổ bóng thành màu trắng */
 }
 
 /* Số lượt view - Ẩn mặc định */
@@ -1342,7 +1376,7 @@ header {
 }
 
     .product-card:hover .product-name {
-        color: #00A97F; /* Thay đổi màu chữ khi hover */
+        color: rgba(33, 150, 243, 1); /* Thay đổi màu chữ khi hover */
     }
 
 .product-card img {
